k8s/deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: gogreeting
  name: gogreeting
  namespace: caixh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gogreeting
  template:
    metadata:
      labels:
        app: gogreeting
    spec:
      containers:
      - image: reg.qiniu.com/caixh/gogreeting:0.0.1
        imagePullPolicy: IfNotPresent
        name: gogreeting
        resources:
          limits:
            cpu: "2"
            memory: 2Gi
          requests:
            cpu: 1000m
            memory: 1Gi
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: registry-secret-default
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
