k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gogreeting
  name: gogreeting-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: gogreeting
  type: ClusterIP
